<resources>
    <string name="app_name">ProveedoresRegistro_DA</string>
    <string name="user_et">Usuario</string>
    <string name="pswd_et">Contraseña</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="logo">Logo_DeAcero</string>
    <string name="transportista_tv">Transportista:</string>
    <string name="chofer_tv">Chofer:</string>
    <string name="camion_tv">Camión</string>
    <string name="contenedor_tv">Contenedor</string>
    <string name="material_tv">Material:</string>
    <string name="cantidad_tv">Cantidad:</string>
    <string name="fechaYhora_tv">Fecha y Hora:</string>
    <string name="material_hint">Ingrese Material</string>
    <string name="cantidad_hint">Ingrese Cantidad</string>
    <string name="save_btn">Guardar</string>
    <string name="boleta_description">Boleta de Salida</string>
    <string name="field_boleta">Boleta de Salida</string>
    <string name="trans_nom_tv">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="insert_nom">Introduzca nombre</string>
    <string name="insert_phone">Introduzca teléfono</string>
    <string name="mail">Correo</string>
    <string name="insert_mail">Introduzca correo</string>
    <string name="RFID">RFID</string>
    <string name="insert_RFID">Introduzca ID</string>
    <string name="dir_origen">Dirección de origen</string>
    <string name="insert_addr">Introduzca dirección</string>
    <string name="dest">Patio de destino</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="ingresar_fecha">Ingrese la fecha y hora</string>
</resources>
