<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarEnvio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/interface_padding">

        <TextView
            android:id="@+id/textView20"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportista_tv" />

        <Spinner
            android:id="@+id/spinner9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView13"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chofer_tv" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView14"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camion_tv" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView15"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenedor_tv" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView16"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_tv" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/material_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView17"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_tv" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView18"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaYhora_tv" />

        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dir_origen"
            style="@style/field_description"/>

        <EditText
            android:id="@+id/editText13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_addr"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dest"
            style="@style/field_description"/>

        <Spinner
            android:id="@+id/spinner8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView38"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comentarios adicionales" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Introduzca comentario"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView19"
            style="@style/field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boleta_description" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/thumbColor">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_boleta"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_add_a_photo_24px" />
        </FrameLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:onClick="guardarEnvioYReg"/>

    </LinearLayout>


</ScrollView>